@@ -398,10 +398,10 @@ class MockBuilder(object):
         return self._name
 
     def results_url(self):
-        return "http://example.com/builders/%s/results/" % self.name()
+        return "http://example.com/builders/%s/results" % self.name()
 
     def accumulated_results_url(self):
-        return "http://example.com/f/builders/%s/results/" % self.name()
+        return "http://example.com/f/builders/%s/results/layout-test-results" % self.name()
 
     def force_build(self, username, comments):
         log("MOCK: force_build: name=%s, username=%s, comments=%s" % (
